greedy algo made, convert to pairs, choose algorithm by user in console