@@ -20,63 +20,77 @@ public class BFSSearch implements Search {
         System.out.println("Amount of steps: " + getAmountOfSteps());
     }
 
-    public LinkedList<Pair> BFS(Node[][] allPaths) throws InterruptedException {
-        LinkedList<Pair> queue = new LinkedList<Pair>();
-        List<Pair> visited = new ArrayList<>();
-        LinkedList<Pair> fringe = new LinkedList<Pair>();
+    public List<Integer> BFS(Graph graph, Integer goal) throws InterruptedException {
+        LinkedList<Integer> queue = new LinkedList<Integer>();
+        List<Integer> visited = new ArrayList<>();
+        LinkedList<Integer> fringe = new LinkedList<Integer>();
 
-        queue.add(new Pair(0,0));
-        fringe.add(new Pair(0,0));
-        visited.add(new Pair(0,0));
+        queue.add(0);
+        fringe.add(0);
+        visited.add(0);
 
         while (queue.size() != 0){
             amountOfSteps++;
-            Integer x = fringe.get(0).getFirst();
-            Integer y = fringe.get(0).getSecond();
+           // Integer x = fringe.get(0).getFirst();
+           // Integer y = fringe.get(0).getSecond();
+            Integer currentNodeIndex = fringe.get(0);
+            if(currentNodeIndex == goal){
+                return queue;
+            }
+           // Node currentNode = allPaths[x][y];
 
-            Node currentNode = allPaths[x][y];
+            LinkedList<Edge> adj = graph.adjacencylist[currentNodeIndex];
+//            Pair nb1 = currentNode.getNeighbour1();
+//            Pair nb2 = currentNode.getNeighbour2();
+//            Pair nb3 = currentNode.getNeighbour3();
+//            Pair nb4 = currentNode.getNeighbour4();
 
-            Pair nb1 = currentNode.getNeighbour1();
-            Pair nb2 = currentNode.getNeighbour2();
-            Pair nb3 = currentNode.getNeighbour3();
-            Pair nb4 = currentNode.getNeighbour4();
-
-            if(!visited.contains(nb1) && nb1 != null && !nb1.equals(new Pair(x,y))){
-                visited.add(nb1);
-                queue.add(nb1);
-                fringe.add(nb1);
-                Node s = allPaths[nb1.getFirst()][nb1.getSecond()];
-                if(s.isPoint()){
+            for(int i=0; i< adj.size();i++){
+                if(!visited.contains(adj.get(i).destination)){
+                    visited.add(adj.get(i).destination);
+                    queue.add(adj.get(i).destination);
+                    fringe.add(adj.get(i).destination);
+                }
+                if(adj.get(i).destination == goal){
                     break;
                 }
             }
-            if( !visited.contains(nb2) && nb2 != null && !nb2.equals(new Pair(x,y))){
-                visited.add(nb2);
-                queue.add(nb2);
-                fringe.add(nb2);
-                Node s = allPaths[nb2.getFirst()][nb2.getSecond()];
-                if(s.isPoint()){
-                    break;
-                }
-            }
-            if(!visited.contains(nb3) && nb3 != null && !nb3.equals(new Pair(x,y))){
-                visited.add(nb3);
-                queue.add(nb3);
-                fringe.add(nb3);
-                Node s = allPaths[nb3.getFirst()][nb3.getSecond()];
-                if(s.isPoint()){
-                    break;
-                }
-            }
-            if(!visited.contains(nb4) && nb4 != null && !nb4.equals(new Pair(x,y))){
-                visited.add(nb4);
-                queue.add(nb4);
-                fringe.add(nb4);
-                Node s = allPaths[nb4.getFirst()][nb4.getSecond()];
-                if(s.isPoint()){
-                    break;
-                }
-            }
+//            if(!visited.contains(nb1) && nb1 != null && !nb1.equals(new Pair(x,y))){
+//                visited.add(nb1);
+//                queue.add(nb1);
+//                fringe.add(nb1);
+//                Node s = allPaths[nb1.getFirst()][nb1.getSecond()];
+//                if(s.isPoint()){
+//                    break;
+//                }
+//            }
+//            if( !visited.contains(nb2) && nb2 != null && !nb2.equals(new Pair(x,y))){
+//                visited.add(nb2);
+//                queue.add(nb2);
+//                fringe.add(nb2);
+//                Node s = allPaths[nb2.getFirst()][nb2.getSecond()];
+//                if(s.isPoint()){
+//                    break;
+//                }
+//            }
+//            if(!visited.contains(nb3) && nb3 != null && !nb3.equals(new Pair(x,y))){
+//                visited.add(nb3);
+//                queue.add(nb3);
+//                fringe.add(nb3);
+//                Node s = allPaths[nb3.getFirst()][nb3.getSecond()];
+//                if(s.isPoint()){
+//                    break;
+//                }
+//            }
+//            if(!visited.contains(nb4) && nb4 != null && !nb4.equals(new Pair(x,y))){
+//                visited.add(nb4);
+//                queue.add(nb4);
+//                fringe.add(nb4);
+//                Node s = allPaths[nb4.getFirst()][nb4.getSecond()];
+//                if(s.isPoint()){
+//                    break;
+//                }
+//            }
 
             fringe.remove(0);
         }
